# rustation-ng

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs
debug/: psx.gdb
fifocmp/: Makefile  main.c
src/: error.rs  lib.rs  libretro.rs  main.rs  memory_card.rs  retrolog.rs
src/debugger/: bios.rs  mod.rs
src/debugger/gdb/: mod.rs
src/psx/: bios.rs  box_array.rs  cop0.rs  cpu.rs  debugger.rs  dma.rs  error.rs  irq.rs  mod.rs  spu.rs  sync.rs  timers.rs  xmem.rs
src/psx/bios/: db.rs  mod.rs
src/psx/cdrom/: cache.rs  controller.rs  disc.rs  fifo.rs  iso9660.rs  mod.rs  resampler.rs  simple_rand.rs
src/psx/cdrom/disc/: cache.rs  mod.rs
src/psx/gpu/: commands.rs  fifo.rs  mod.rs  rasterizer.rs
src/psx/gpu/rasterizer/: draw.rs  mod.rs
src/psx/gpu/rasterizer/draw/: fixed_point.rs  mod.rs  tests.rs
src/psx/gte/: mod.rs
src/psx/mdec/: fifo.rs  mod.rs
src/psx/pad_memcard/: gamepad.rs  mod.rs
src/psx/pad_memcard/devices/: gamepad.rs  memory_card.rs  mod.rs
src/psx/spu/: fifo.rs  mod.rs
