[package]
name = "rustation-retro"
version = "0.1.0"
authors = ["Lionel Flandrin <lionel@svkt.org>"]
edition = "2018"
description = "A PlayStation emulator libretro core"
license = "GPL-2.0+"
keywords = ["emulator", "playstation"]

[lib]
name = "rustation_ng_retro"
crate-type = ["dylib"]

[features]
# Enable debugger support
debugger = []

[profile.dev]
debug = true
# The emulator is not really usable without optims so we force them even for
# debug builds
opt-level = 3
incremental = true
overflow-checks = true

[profile.release]
debug = false
# Disable parallel code generation. Increases build time but can improve
# performance
codegen-units = 1
lto = true
panic = 'abort'
incremental = false
overflow-checks = false

[dependencies]
libc = "0.2"
shaman = "0.1"
fnv = "1.0"

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.cdimage]
git = "https://github.com/simias/cdimage"
branch = "master"
